[package]
name = "a2ml-estate-normalizer"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Estate-wide A2ML file normalizer - ensures correct structure and transpiles .scm to .a2ml"
readme = "README.adoc"
keywords = ["a2ml", "normalization", "transpiler", "scheme", "estate-management"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
regex = "1.10"

[[bin]]
name = "a2ml-estate-normalizer"
path = "src/main.rs"
